# music_app

./: ARCHITECTURE_REVIEW.md  CMakeLists.txt  SETUP_GUIDE.md  TimelineIndicator.cpp  audioitem.cpp  mainwindow.cpp  timelinewidget.cpp  timelinewidget.h  track.cpp
src/: appconfig.cpp  appconfig.h  audioengine.cpp  audioengine.h  audioengine_test.cpp  audioerror.h  audioimportdialog.cpp  audioimportdialog.h  audioiodevice.cpp  audioiodevice.h  ffmpegaudioengine.cpp  ffmpegaudioengine.h  mainwindow.cpp  mainwindow.h  transportdock.cpp  transportdock.h
timelinewidget/: TimelineIndicator.cpp  TimelineIndicator.h  audioitem.cpp  audioitem.h  timelinewidget.cpp  timelinewidget.h  track.cpp  track.h  trackheaderwidget.cpp  trackheaderwidget.h  tracksettingsdialog.cpp  tracksettingsdialog.h
